fixed stretching issue

--- a/cinnabon.css
+++ b/cinnabon.css
@@ -1,5 +1,5 @@
 * {
-    font-family: (Roboto);
+    font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: normal;
 }
@@ -10,7 +10,7 @@
 }
 
 h1 {
-    font-family: "Adobe Caslon Pro";
+    font-family: "Adobe Caslon Pro", serif;
     font-style: normal;
     font-weight: bold;
     font-size: 44px;
@@ -29,7 +29,7 @@ h1 {
 }
 /*this is to adjust margin for intro */
 div.col-md-2 {
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
@@ -42,7 +42,7 @@ div.col-md-2 {
 }
 
 div.col-md-10 {
-    font-family: (Roboto);
+    font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
@@ -64,7 +64,7 @@ ul.sectionHeader {
 }
 
 ul.sectionHeader li {
-    font-family: (Roboto);
+    font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 24px;
@@ -75,7 +75,7 @@ ul.sectionHeader li {
 }
 
 p {
-    font-family: "SF Pro Text";
+    font-family: "SF Pro Text", sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -102,11 +102,11 @@ p {
 }
 
 #prototype2 {
-    width: 90%;
+    width: 95%;
 }
 
 #prototype3 {
-    width: 90%;
+    width: 95%;
     height: auto;
 }
 
@@ -117,22 +117,22 @@ p {
 }
 
 #cinnabon_visual {
-    width: 90%;
+    width: 95%;
 }
 
 #cinnabon_figma {
-    width: 90%;
+    width: 95%;
     height: auto;
     cursor: zoom-in;
 }
 
 #cinnabon_final {
-    width: 90%;
-    height: auto;
+    width: 95%;  
+    height: auto;  
 }
 
 #cinnabon_revision {
-    width: 90%;
+    width: 95%;
     height: auto;
 }
 
@@ -158,7 +158,7 @@ button {
 /* Figures */
 
 .figure-caption {
-    font-family: "SF Pro Text";
+    font-family: "SF Pro Text", sans-serif;
     font-style: italic;
     font-weight: 300;
     font-size: 10px;
@@ -212,7 +212,7 @@ a.nav-link:hover, a.nav-link:active, a.design_sub:hover, a.design_sub:active {
 }
 
 #copyright {
-    font-family: "SF Pro Text";
+    font-family: "SF Pro Text", sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 12px;
@@ -230,7 +230,7 @@ footer {
 }
 
 #nextText {
-    font-family: "SF Pro Text";
+    font-family: "SF Pro Text", sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -241,7 +241,7 @@ footer {
 
 @media (max-width:768px) {
     div.col-md-2 {
-        font-family: 'Roboto';
+        font-family: 'Roboto', sans-serif;
         font-style: normal;
         font-weight: normal;
         font-size: 14px;
@@ -252,7 +252,7 @@ footer {
     }
     
     div.col-md-10 {
-        font-family: (Roboto);
+        font-family: 'Roboto', sans-serif;
         font-style: normal;
         font-weight: normal;
         font-size: 14px;
