--- a/knows.css
+++ b/knows.css
@@ -162,7 +162,7 @@ p, .list {
 }
 
 #privacy_grade {
-    width: 100%;
+    width: 60%;
     cursor: zoom-in;
 }
 
